Added gets or sets property rule for model template

--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
@@ -39,7 +39,7 @@ namespace @Settings.Namespace
         @:/// </param>
         }
         @:/// <param name='customHeaders'>
-        @:/// The headers that will be added to request.
+        @:/// The headers that will be added to the request.
         @:/// </param>
         @:/// <param name='cancellationToken'>
         @:/// The cancellation token.
