--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -23,7 +23,7 @@
 @:/// </param>
 }
 /// <param name='customHeaders'>
-/// Headers that will be added to request.
+/// Headers that will be added to the request.
 /// </param>
 /// <param name='cancellationToken'>
 /// The cancellation token.
