--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -29,17 +29,17 @@ namespace @Settings.Namespace
         {
         @:Uri BaseUri { get; set; }
         }
-        
+
         @EmptyLine
 
         /// <summary>
-        /// Gets or sets json serialization settings.
+        /// Gets the JSON serialization settings.
         /// </summary>
         JsonSerializerSettings SerializationSettings { get; }
         @EmptyLine
 
         /// <summary>
-        /// Gets or sets json deserialization settings.
+        /// Gets the JSON deserialization settings.
         /// </summary>
         JsonSerializerSettings DeserializationSettings { get; }
         @EmptyLine
@@ -82,7 +82,7 @@ namespace @Settings.Namespace
         @:/// </param>
         }
         @:/// <param name='customHeaders'>
-        @:/// The headers that will be added to request.
+        @:/// The headers that will be added to the request.
         @:/// </param>
         @:/// <param name='cancellationToken'>
         @:/// The cancellation token.
