Fix PageImpl class names

--- a/AutoRest/Generators/Java/Azure.Java/Templates/PageTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/PageTemplate.cshtml
@@ -61,7 +61,7 @@ public class @Model.TypeDefinitionName<T> implements Page<T> {
      * @@param nextPageLink the link to the next page.
      * @@return this Page object itself.
      */
-    public PageImpl<T> setNextPageLink(String nextPageLink) {
+    public @Model.TypeDefinitionName<T> setNextPageLink(String nextPageLink) {
         this.nextPageLink = nextPageLink;
         return this;
     }
@@ -72,7 +72,7 @@ public class @Model.TypeDefinitionName<T> implements Page<T> {
      * @@param items the list of items in {@@link List}.
      * @@return this Page object itself.
      */
-    public PageImpl<T> setItems(List<T> items) {
+    public @Model.TypeDefinitionName<T> setItems(List<T> items) {
         this.items = items;
         return this;
     }
