Change body serialization for complex type

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
@@ -59,13 +59,27 @@
 {
             @:# Construct body
   if (Model.RequestBody.IsRequired)
-  {
+    {
+        if (Model.RequestBody.Type is CompositeType)
+        {
+            @:body_content = self._serialize.body(@Model.RequestBody.Name, models.@(Model.RequestBody.Type.ToPythonRuntimeTypeString()))
+        }
+        else
+        {
             @:body_content = self._serialize.body(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
-  }
-  else
-  {
+        }
+    }
+    else
+    {
             @:if @Model.RequestBody.Name is not None:
+        if (Model.RequestBody.Type is CompositeType)
+        {
+                @:body_content = self._serialize.body(@Model.RequestBody.Name, models.@(Model.RequestBody.Type.ToPythonRuntimeTypeString()))
+        }
+        else
+        {
                 @:body_content = self._serialize.body(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
+        }
             @:else:
                 @:body_content = None
   }
