--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -125,7 +125,7 @@ else
 {
         @:client_models = {}
 }
-        self._serialize = Serializer()
+        self._serialize = Serializer(client_models)
         self._deserialize = Deserializer(client_models)
 @EmptyLine
 @foreach (var methodGroup in Model.MethodGroupModels)
