--- a/AutoRest/Generators/Java/Java/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/EnumTemplate.cshtml
@@ -9,9 +9,14 @@
 
 package @(Settings.Namespace.ToLower()).@Model.ModelsPackage;
 @EmptyLine
+@if (!Model.ModelAsString)
+{
+<text>
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
 @EmptyLine
+</text>
+}
 
 /**
  * Defines values for @(Model.Name).
@@ -78,13 +83,15 @@ public enum @(Model.Name) {
 else
 {
 <text>
-public class @(Model.Name) {
+public final class @(Model.Name) {
 @for (int i = 0; i < Model.Values.Count; i++)
 {
 @:    /** Static value @(Model.Values[i].SerializedName) for @(Model.Name). */
 @:    public static final String @(Model.Values[i].Name) = "@(Model.Values[i].SerializedName)";
 @EmptyLine
 }
+    private @(Model.Name)() {
+    }
 }
 </text>
 }
