--- a/AutoRest/Generators/Java/Azure.Java/Templates/PageTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/PageTemplate.cshtml
@@ -8,7 +8,7 @@
  */
 @EmptyLine
 
-package @(Settings.Namespace.ToLower()).models;
+package @(Settings.Namespace.ToLower()).@(Model.ModelsPackage);
 @EmptyLine
 @foreach (var importClass in Model.ImportList)
 {
