--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -160,8 +160,11 @@ namespace @(Settings.Namespace).Models
 @if(@Model.ShouldValidateChain())
 {
         @:/// <summary>
-        @:/// Validate the object. Throws ValidationException if validation fails.
+        @:/// Validate the object.
         @:/// </summary>
+        @:/// <exception cref="ValidationException">
+        @:/// Thrown if validation fails
+        @:/// </exception>
         @:public @Model.MethodQualifier void Validate()
         @:{
             bool anythingToValidate = false;
