--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -127,7 +127,15 @@ namespace @(Settings.Namespace).Models
             {
         @:[JsonConverter(typeof(UnixTimeJsonConverter))]
             }
+
+            if (property.Type is DictionaryType && (property.Type as DictionaryType).SupportsAdditionalProperties)
+            {
+        @:[JsonExtensionData]
+            }
+            else
+            {
         @:[JsonProperty(PropertyName = "@property.SerializedName")]
+            }
         @:public @property.Type.Name @property.Name { get; @(property.IsReadOnly ? "private " : "")set; }
         @EmptyLine
         }
